syntax = "proto3";
package bierzee;

import "entities/payment.proto";

message PostPayRequest {
  double amount = 1;
}

message GetListPaymentsResponse {
  repeated Payment payments = 1;
}

message GetBalanceResponse {
  double amountPaid = 1;
  int64 beersDrunk = 2;
  double balance = 3;
  int64 beersLeft = 4;
}